--- a/index.html
+++ b/index.html
@@ -13,26 +13,78 @@
 	<div class="container-wrapper cb-top">
 
 		<nav class="row test">
-		    <h1>Craftbox</h1>
-		    <a href="http://yamasan.hateblo.jp/" target="_blank" class="button tiny radius">工事中</a>		
+		    <h1>Craftbox</h1>		
 		</nav>
 
 		<section class="container row test">
+
+		<h3>Button</h3>
 			
-			<div class="medium-3 cb-view columns test">
-				<div class="button-radius-icon test"></div>
+			<div class="row collapse wrap">
+
+				<div class="medium-3 cb-view columns test">
+					<div class="button-radius-icon"></div>
+				</div>
+
+				<div class="medium-9 cb-source columns test">
+					<h2>.button-radius-icon</h2>
+					<pre>
+						<code>
+.button-radius-icon {
+	width: 6.25rem;
+	height: 6.25rem;
+	-moz-border-radius: 4px / 4px;
+	-webkit-border-radius: 4px 4px;
+	border-radius: 4px / 4px;
+	background-color: #EFEFEF;
+}
+						</code>
+					</pre>
+
+				</div>
+
 			</div>
 
-			<div class="medium-9 cb-source columns test">
-				.button-radius-icon
+
+			<div class="row collapse">
+
+				<div class="medium-3 cb-view columns test">
+					<div class="button-radius-icon"></div>
+				</div>
+
+				<div class="medium-9 cb-source columns test">
+					<h2>.button-radius-icon</h2>
+					<pre>
+						<code>
+.button-radius-icon {
+	width: 6.25rem;
+	height: 6.25rem;
+	-moz-border-radius: 4px / 4px;
+	-webkit-border-radius: 4px 4px;
+	border-radius: 4px / 4px;
+	background-color: #EFEFEF;
+}
+						</code>
+					</pre>
+
+				</div>
+
 			</div>
+
+
+
 			
-		</section>
+		</section><!-- end .container -->
+
+
+
 
 		<footer class="row test">
 			<small>Copyright&copy;Design&nbsp;TakashiYAMAGUCHI&nbsp;All&nbsp;Rights&nbsp;Reserved.</small>
+
+			<a href="http://yamasan.hateblo.jp/" target="_blank"><span class="label alert round"><i class="fa fa-gavel"></i>工事中です</span></a>
 		</footer>
-	
+
 	</div><!-- end .container-wrapper -->
 
 <script src="/bower_components/foundation/js/vendor/jquery.js"></script>
