--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 
+	<!-- github ribbon -->
+	<a href="https://github.com/you"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
+
 	<div class="container-wrapper cb-top">
 
 		<nav class="row test">
@@ -82,7 +85,7 @@
 		<footer class="row test">
 			<small>Copyright&copy;Design&nbsp;TakashiYAMAGUCHI&nbsp;All&nbsp;Rights&nbsp;Reserved.</small>
 
-			<a href="http://yamasan.hateblo.jp/" target="_blank"><span class="label alert round"><i class="fa fa-gavel"></i>工事中です</span></a>
+			<a href="http://yamasan.hateblo.jp/" target="_blank"><span class="label alert round"><i class="fa fa-gavel fa-spin"></i>工事中です</span></a>
 		</footer>
 
 	</div><!-- end .container-wrapper -->
