--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
 <title>Craftbox</title>
 <link rel="stylesheet" href="/stylesheets/app.css">
 <link rel="stylesheet" href="/stylesheets/fonts/font-awesome.min.css">
 <link rel="stylesheet" href="/stylesheets/fonts/foundation-icons.css">
+<script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
 
@@ -90,9 +92,9 @@
 
 	</div><!-- end .container-wrapper -->
 
-<script src="/bower_components/foundation/js/vendor/jquery.js"></script>
-<script src="/bower_components/foundation/js/vendor/fastclick.js"></script>
-<script src="/bower_components/foundation/js/foundation.min.js"></script>
+<script src="/bower_components/fastclick/js/lib/fastclick.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/foundation/js/foundation.min.js"></script>
 <script src="/js/app.js"></script>
 
 </body>
