--- a/parts/button-radius-icon.html
+++ b/parts/button-radius-icon.html
@@ -18,7 +18,7 @@
 	<div class="container-wrapper cb-top">
 
 		<nav class="row test">
-		    <h1 class="text-center text-left-for-large">Craftbox</h1>		
+		    <h1>Craftbox</h1>		
 		</nav>
 
 		<section class="container row test">
@@ -27,16 +27,11 @@
 			
 			<div class="row collapse wrap">
 
-				<article>
-					<div class="medium-3 cb-view-wrap columns test">
-						<div class="cb-view test">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
-					</div>
-				</article>
+				<div class="medium-3 cb-view columns test">
+					<div class="button-radius-icon"></div>
+				</div>
 
-				<!-- <div class="medium-9 cb-source columns test">
+				<div class="medium-9 cb-source columns test">
 					<h2>.button-radius-icon</h2>
 					<pre>
 						<code>
@@ -51,9 +46,38 @@
 						</code>
 					</pre>
 
-				</div> -->
+				</div>
 
 			</div>
+
+
+			<div class="row collapse">
+
+				<div class="medium-3 cb-view columns test">
+					<div class="button-radius-icon"></div>
+				</div>
+
+				<div class="medium-9 cb-source columns test">
+					<h2>.button-radius-icon</h2>
+					<pre>
+						<code>
+.button-radius-icon {
+	width: 6.25rem;
+	height: 6.25rem;
+	-moz-border-radius: 4px / 4px;
+	-webkit-border-radius: 4px 4px;
+	border-radius: 4px / 4px;
+	background-color: #EFEFEF;
+}
+						</code>
+					</pre>
+
+				</div>
+
+			</div>
+
+
+
 			
 		</section><!-- end .container -->
 
