--- a/index.html
+++ b/index.html
@@ -23,37 +23,72 @@
 
 		<section class="container row test">
 
-		<h3>Button</h3>
-			
-			<div class="row collapse wrap">
+			<div data-magellan-expedition="fixed">
+				<dl class="sub-nav">
+					<dd data-magellan-arrival="button"><a href="#button">Button</a></dd>
+				</dl>
+			</div>
 
-				<article>
+			<a name="button"></a>
+			<h3>Button</h3>
+
+			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+			</ul>
+
+			
+			<!-- <div class="row collapse wrap"> -->
+
+				<!-- <article>
 					<div class="medium-3 cb-view-wrap columns test">
 						<div class="cb-view test">
 							<div class="button-radius-icon"></div>
 						</div>
 						<h2>.button-radius-icon</h2>
 					</div>
-				</article>
+				</article> -->
 
-				<!-- <div class="medium-9 cb-source columns test">
-					<h2>.button-radius-icon</h2>
-					<pre>
-						<code>
-.button-radius-icon {
-	width: 6.25rem;
-	height: 6.25rem;
-	-moz-border-radius: 4px / 4px;
-	-webkit-border-radius: 4px 4px;
-	border-radius: 4px / 4px;
-	background-color: #EFEFEF;
-}
-						</code>
-					</pre>
-
-				</div> -->
-
-			</div>
+			<!-- </div> -->
 			
 		</section><!-- end .container -->
 
@@ -68,7 +103,7 @@
 
 	</div><!-- end .container-wrapper -->
 
-<script src="/bower_components/fastclick/js/lib/fastclick.js"></script>
+<script src="/bower_components/fastclick/lib/fastclick.js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/foundation/js/foundation.min.js"></script>
 <script src="/js/app.js"></script>
