--- a/index.html
+++ b/index.html
@@ -13,21 +13,33 @@
 <body>
 
 	<!-- github ribbon -->
-	<a href="https://github.com/takashiyamaguchi" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+	<a href="https://github.com/takashiyamaguchi" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 
 	<div class="container-wrapper cb-top">
 
-		<nav class="row test">
-		    <h1 class="small-only-text-center">Craftbox</h1>		
+		<nav>
+			<div class="row">
+				<h1>Craftbox</h1>
+			</div>
 		</nav>
 
-		<section class="container row test">
-
-			<div data-magellan-expedition="fixed">
-				<dl class="sub-nav">
-					<dd data-magellan-arrival="button"><a href="#button">Button</a></dd>
-				</dl>
+		<div class="row">
+		<a href="http://yamasan.hateblo.jp/" target="_blank"><span class="label alert round"><i class="fa fa-gavel fa-spin"></i>工事中です</span></a>	
+		</div>
+		
+		<section>
+			<div class="row">
+				<div data-magellan-expedition="fixed">
+					<dl class="sub-nav">
+						<dd data-magellan-arrival="button"><a href="#button">Button</a></dd>
+						<dd data-magellan-arrival="color"><a href="#color">Color</a></dd>
+						<dd data-magellan-arrival="icon"><a href="#icon">Icon</a></dd>
+					</dl>
+				</div>
 			</div>
+		</section>
+
+		<section class="container row test">
 
 			<a name="button"></a>
 			<h3>Button</h3>
@@ -76,20 +88,99 @@
 
 			</ul>
 
-			
-			<!-- <div class="row collapse wrap"> -->
 
-				<!-- <article>
-					<div class="medium-3 cb-view-wrap columns test">
+			<a name="color"></a>
+			<h3>Color</h3>
+
+			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
 						<div class="cb-view test">
 							<div class="button-radius-icon"></div>
 						</div>
 						<h2>.button-radius-icon</h2>
-					</div>
-				</article> -->
+					</a>
+				</li>
 
-			<!-- </div> -->
-			
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+			</ul>
+
+			<a name="icon"></a>
+			<h3>Icon</h3>
+
+			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+				<!-- button-radius-icon -->
+				<li class="cb-view-wrap test">
+					<a href="parts/button-radius-icon.html" title="button-radius-icon">
+						<div class="cb-view test">
+							<div class="button-radius-icon"></div>
+						</div>
+						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+			</ul>
+
 		</section><!-- end .container -->
 
 
@@ -97,8 +188,6 @@
 
 		<footer class="row test">
 			<small>Copyright&copy;Design&nbsp;TakashiYAMAGUCHI&nbsp;All&nbsp;Rights&nbsp;Reserved.</small>
-
-			<a href="http://yamasan.hateblo.jp/" target="_blank"><span class="label alert round"><i class="fa fa-gavel fa-spin"></i>工事中です</span></a>
 		</footer>
 
 	</div><!-- end .container-wrapper -->
