--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
 <title>Craftbox</title>
 <link rel="stylesheet" href="/stylesheets/app.css">
 <link rel="stylesheet" href="/stylesheets/fonts/font-awesome.min.css">
@@ -34,12 +33,13 @@
 						<dd data-magellan-arrival="button"><a href="#button">Button</a></dd>
 						<dd data-magellan-arrival="color"><a href="#color">Color</a></dd>
 						<dd data-magellan-arrival="icon"><a href="#icon">Icon</a></dd>
+						<dd data-magellan-arrival="site"><a href="#site">Site</a></dd>
 					</dl>
 				</div>
 			</div>
 		</section>
 
-		<section class="container row test">
+		<section class="container row">
 
 			<a name="button"></a>
 			<h3>Button</h3>
@@ -47,39 +47,9 @@
 			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
 
 				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
+				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
-					</a>
-				</li>
-
-				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
-					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
-					</a>
-				</li>
-
-				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
-					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
-					</a>
-				</li>
-
-				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
-					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
+						<div class="cb-view">
 							<div class="button-radius-icon"></div>
 						</div>
 						<h2>.button-radius-icon</h2>
@@ -93,40 +63,11 @@
 			<h3>Color</h3>
 
 			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
-				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
+				
+				<!-- brand color -->
+				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
-					</a>
-				</li>
-
-				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
-					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
-					</a>
-				</li>
-
-				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
-					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
-					</a>
-				</li>
-
-				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
-					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
+						<div class="cb-view">
 							<div class="button-radius-icon"></div>
 						</div>
 						<h2>.button-radius-icon</h2>
@@ -140,9 +81,9 @@
 
 			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
 				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
+				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
+						<div class="cb-view">
 							<div class="button-radius-icon"></div>
 						</div>
 						<h2>.button-radius-icon</h2>
@@ -150,9 +91,9 @@
 				</li>
 
 				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
+				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
+						<div class="cb-view">
 							<div class="button-radius-icon"></div>
 						</div>
 						<h2>.button-radius-icon</h2>
@@ -160,9 +101,9 @@
 				</li>
 
 				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
+				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
+						<div class="cb-view">
 							<div class="button-radius-icon"></div>
 						</div>
 						<h2>.button-radius-icon</h2>
@@ -170,12 +111,30 @@
 				</li>
 
 				<!-- button-radius-icon -->
-				<li class="cb-view-wrap test">
+				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view test">
+						<div class="cb-view">
 							<div class="button-radius-icon"></div>
 						</div>
 						<h2>.button-radius-icon</h2>
+					</a>
+				</li>
+
+			</ul>
+
+
+			<a name="site"></a>
+			<h3>Site</h3>
+
+			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+				
+				<!-- coyomee Inc -->
+				<li class="cb-view-wrap">
+					<a href="site-coyomee" title="coyomee">
+						<div class="cb-view">
+							<div class="coyomee"></div>
+						</div>
+						<h2>coyomee Inc</h2>
 					</a>
 				</li>
 
@@ -186,7 +145,7 @@
 
 
 
-		<footer class="row test">
+		<footer class="row">
 			<small>Copyright&copy;Design&nbsp;TakashiYAMAGUCHI&nbsp;All&nbsp;Rights&nbsp;Reserved.</small>
 		</footer>
 
