--- a/index.html
+++ b/index.html
@@ -128,13 +128,23 @@
 
 			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
 				
-				<!-- coyomee Inc -->
+			<!-- coyomee servicepage -->
+				<li class="cb-view-wrap">
+					<a href="site-coyomee-service" title="coyomee">
+						<div class="cb-view">
+							<div class="coyomee-service"></div>
+						</div>
+						<h2>coyomee-service 2012/04/04</h2>
+					</a>
+				</li>
+
+				<!-- coyomee Inc 2015/04/04 -->
 				<li class="cb-view-wrap">
 					<a href="site-coyomee" title="coyomee">
 						<div class="cb-view">
 							<div class="coyomee"></div>
 						</div>
-						<h2>coyomee Inc</h2>
+						<h2>coyomee Inc 2015/04/04</h2>
 					</a>
 				</li>
 
