--- a/site-coyomee/index.html
+++ b/site-coyomee/index.html
@@ -32,29 +32,32 @@
 		*~~~~~~~~~~~~~
 		-->
 
-		<header id="header" class="test">
-			
-			<div class="coyo-bar test">
-				<i class="fa fa-facebook"></i>
-				<i class="fa fa-twitter"></i>
-				<i class="fa fa-google-plus"></i>
-				<i class="fa fa-rss"></i>
-			</div>
+		<div class="coyo-bar show-for-medium-up">
+			<a href="https://www.facebook.com/coyomee" target="_blank"><i class="fa fa-facebook"></i></a>
+			<a href="https://twitter.com/coyomee_JP" target="_blank"><i class="fa fa-twitter"></i></a>
+			<a href="https://plus.google.com/110866857689961066602/about" target="_blank"><i class="fa fa-google-plus"></i></a>
+			<a href="#"><i class="fa fa-rss"></i></a>
+		</div>
 
+		<header id="header">
+			
 			<nav class="row">
 
 				<h1>coyomee</h1>
 
 				<!-- show-for-small-only -->
-				<i class="fa fa-navicon show-for-small-only right"></i>
+				<a class="right" href="#">
+					<i class="fa fa-navicon show-for-small-only"></i>
+				</a>
 
+			    
 				<!-- show-for-medium-up -->
 				<ul class="right no-bullet show-for-medium-up">
-					<li><a href="#">service</a></li>
-					<li><a href="#">service</a></li>
-					<li><a href="#">service</a></li>
-					<li><a href="#">service</a></li>
-					<li><a href="#">service</a></li>
+					<li><a href="#">Service</a></li>
+					<li><a href="#">Press</a></li>
+					<li><a href="#">Recruit</a></li>
+					<li><a href="#">About&nbsp;us</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
 
 			</nav>
@@ -69,7 +72,7 @@
 		-->
 		<section class="test">
 			<div class="coyo-news row">
-				<p>news</p>
+				<h2>お知らせ</h2>
 				<table>
 					<!-- <caption>news</caption> -->
 					<tbody>
@@ -103,12 +106,12 @@
 			<div class="row test">
 
 				<section class="test columns medium-8">
-					<h2>新着記事</h2>
+					<h3>新着記事</h3>
 
 					<article class="p-highlight test" style="background-image:url(/img/sample.jpg);">
 
 						<p class="text-center">2015/02/14</p>
-						<h3 class="text-center">注目記事のタイトル</h3>
+						<h4 class="text-center">注目記事のタイトル</h4>
 					</article>
 
 					<article class="p-contents test columns medium-6">
