押し汗を修正

--- a/site-coyomee/index.html
+++ b/site-coyomee/index.html
@@ -73,8 +73,15 @@
 		<section class="test">
 			<div class="coyo-news row">
 				<h2>お知らせ</h2>
-				<table>
-					<!-- <caption>news</caption> -->
+
+				<ul class="no-bullet">
+					<li>
+						<em>2015-02-15</em>
+						<span>新着</span>
+						<a href="#" title="">ここにお知らせが表示されますよ</a>
+					</li>
+				</ul>
+				<!-- <table>
 					<tbody>
 						<tr>
 							<td>2015-02-15</td>
@@ -92,7 +99,7 @@
 							<td>ここにお知らせが表示されますよ</td>
 						</tr>
 					</tbody>
-				</table>
+				</table> -->
 			</div>
 		</section>
 
