--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Craftbox</title>
 <link rel="stylesheet" href="/stylesheets/app.css">
-<link rel="stylesheet" href="/stylesheets/fonts/font-awesome.min.css">
 <link rel="stylesheet" href="/stylesheets/fonts/foundation-icons.css">
 <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
 
 	<!-- github ribbon -->
-	<a href="https://github.com/takashiyamaguchi" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+	<a href="https://github.com/takashiyamaguchi" target="_blank" class="show-for-medium-up">
+		<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
+	</a>
 
 	<div class="container-wrapper cb-top">
 
 		<nav>
 			<div class="row">
 				<h1>Craftbox</h1>
+				<a href="https://github.com/takashiyamaguchi" target="_blank" class="show-for-small-only right"><i class="fi-social-github"></i></a>
 			</div>
 		</nav>
 
@@ -44,15 +46,12 @@
 			<a name="button"></a>
 			<h3>Button</h3>
 
-			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+			<ul class="no-bullet">
 
 				<!-- button-radius-icon -->
 				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
+						.button-radius-icon
 					</a>
 				</li>
 
@@ -62,15 +61,12 @@
 			<a name="color"></a>
 			<h3>Color</h3>
 
-			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+			<ul class="no-bullet">
 				
 				<!-- brand color -->
 				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
+						.button-radius-icon
 					</a>
 				</li>
 
@@ -79,44 +75,32 @@
 			<a name="icon"></a>
 			<h3>Icon</h3>
 
-			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+			<ul class="no-bullet">
 				<!-- button-radius-icon -->
 				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
+						.button-radius-icon
 					</a>
 				</li>
 
 				<!-- button-radius-icon -->
 				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
+						.button-radius-icon
 					</a>
 				</li>
 
 				<!-- button-radius-icon -->
 				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
+						.button-radius-icon
 					</a>
 				</li>
 
 				<!-- button-radius-icon -->
 				<li class="cb-view-wrap">
 					<a href="parts/button-radius-icon.html" title="button-radius-icon">
-						<div class="cb-view">
-							<div class="button-radius-icon"></div>
-						</div>
-						<h2>.button-radius-icon</h2>
+						.button-radius-icon
 					</a>
 				</li>
 
@@ -126,25 +110,19 @@
 			<a name="site"></a>
 			<h3>Site</h3>
 
-			<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+			<ul class="no-bullet">
 				
 			<!-- coyomee servicepage -->
 				<li class="cb-view-wrap">
 					<a href="site-coyomee-service" title="coyomee">
-						<div class="cb-view">
-							<div class="coyomee-service"></div>
-						</div>
-						<h2>coyomee-service 2012/04/04</h2>
+						coyomee-service 2012/04/04
 					</a>
 				</li>
 
 				<!-- coyomee Inc 2015/04/04 -->
 				<li class="cb-view-wrap">
 					<a href="site-coyomee" title="coyomee">
-						<div class="cb-view">
-							<div class="coyomee"></div>
-						</div>
-						<h2>coyomee Inc 2015/04/04</h2>
+						coyomee Inc 2015/04/04
 					</a>
 				</li>
 
