--- a/site-coyomee/index.html
+++ b/site-coyomee/index.html
@@ -5,9 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>coyomee Inc</title>
 
-<link rel="stylesheet" href="/stylesheets/fonts/font-awesome.min.css">
+<!-- <link rel="stylesheet" href="/stylesheets/fonts/font-awesome.min.css"> -->
 <link rel="stylesheet" href="/stylesheets/fonts/foundation-icons.css">
 <link rel="stylesheet" href="/stylesheets/app.css">
+
+<!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet"> -->
 
 <script src="/bower_components/modernizr/modernizr.js"></script>
 
@@ -36,10 +38,10 @@
 		-->
 
 		<div class="coyo-bar show-for-medium-up">
-			<a href="https://www.facebook.com/coyomee" target="_blank"><i class="fa fa-facebook"></i></a>
-			<a href="https://twitter.com/coyomee_JP" target="_blank"><i class="fa fa-twitter"></i></a>
-			<a href="https://plus.google.com/110866857689961066602/about" target="_blank"><i class="fa fa-google-plus"></i></a>
-			<a href="#"><i class="fa fa-rss"></i></a>
+			<a href="https://www.facebook.com/coyomee" target="_blank"><i class="fi-social-facebook"></i></a>
+			<a href="https://twitter.com/coyomee_JP" target="_blank"><i class="fi-social-twitter"></i></a>
+			<a href="https://plus.google.com/110866857689961066602/about" target="_blank"><i class="fi-social-google-plus"></i></a>
+			<a href="#"><i class="fi-rss"></i></a>
 		</div>
 
 		<header id="header">
@@ -66,7 +68,6 @@
 		
 		</header>
 
-<span class="fa fa-ambulance"></span>
 		<!-- 
 		*~~~~~~~~~~~~~
 		* お知らせ 
