--- a/site-coyomee/index.html
+++ b/site-coyomee/index.html
@@ -38,10 +38,12 @@
 		-->
 
 		<div class="coyo-bar show-for-medium-up">
-			<a href="https://www.facebook.com/coyomee" target="_blank"><i class="fi-social-facebook"></i></a>
-			<a href="https://twitter.com/coyomee_JP" target="_blank"><i class="fi-social-twitter"></i></a>
-			<a href="https://plus.google.com/110866857689961066602/about" target="_blank"><i class="fi-social-google-plus"></i></a>
-			<a href="#"><i class="fi-rss"></i></a>
+			<div class="row clearfix">
+				<a href="https://www.facebook.com/coyomee" target="_blank" class="right"><i class="fi-social-facebook"></i></a>
+				<a href="https://twitter.com/coyomee_JP" target="_blank" class="right"><i class="fi-social-twitter"></i></a>
+				<a href="https://plus.google.com/110866857689961066602/about" target="_blank" class="right"><i class="fi-social-google-plus"></i></a>
+				<a href="#" class="right"><i class="fi-rss"></i></a>
+			</div>
 		</div>
 
 		<header id="header">
