--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
 			<ul class="no-bullet">
 				
 			<!-- coyomee servicepage -->
-				<li class="cb-view-wrap">
+				<!-- <li class="cb-view-wrap">
 					<a href="site-coyomee-service" title="coyomee">
 						coyomee-service 2012/04/04
 					</a>
-				</li>
+				</li> -->
 
 				<!-- coyomee Inc 2015/04/04 -->
-				<li class="cb-view-wrap">
+				<!-- <li class="cb-view-wrap">
 					<a href="site-coyomee" title="coyomee">
 						coyomee Inc 2015/04/04
 					</a>
-				</li>
+				</li> -->
 
 			</ul>
 
