new repo palette.css

--- a/index.html
+++ b/index.html
@@ -3,23 +3,37 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Craftbox</title>
+		<title>takashiyamaguchi.github.io</title>
 		<link rel="stylesheet" href="stylesheets/app.css" />
 		<script src="bower_components/modernizr/modernizr.js"></script>
 	</head>
 	<body>
-		<header>
-			<nav>
-				<ul>
-					<li><a href="" title=""></a></li>
-				</ul>
-			</nav>
-			
-		</header><!-- /header -->
+		<div class="wrapper site-top">
+			<header>
+				<div class="row">
+					<h1>takashiyamaguchi.github.io</h1>
+				</div>	
+			</header><!-- /header -->
 
-		<!-- JavaScript -->
-		<script src="bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="bower_components/foundation/js/foundation.min.js"></script>
-		<script src="js/app.js"></script>
+			
+			<section class="row">
+				<ul class="no-bullet small-block-grid-2 medium-block-grid-3 large-block-grid-4">
+					<li>
+						<a href="./palette" title="">
+							<h2>palette.css</h2>
+							<em>Color-Chart</em>
+						</a>
+					</li>
+					
+				</ul>
+
+			</section>
+
+
+			<!-- JavaScript -->
+			<script src="bower_components/jquery/dist/jquery.min.js"></script>
+			<script src="bower_components/foundation/js/foundation.min.js"></script>
+			<script src="js/app.js"></script>
+		</div>
 	</body>
 </html>
