--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<section class="row">
 				<ul class="no-bullet small-block-grid-2 medium-block-grid-3 large-block-grid-4">
 					<li>
-						<a href="./palette" title="">
+						<a href="https://github.com/takashiyamaguchi/palette.css" title="palette.css" target="_blank">
 							<h2>palette.css</h2>
 							<em>Color-Chart</em>
 						</a>
