--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="ja">
+<html lang="ja">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -14,7 +14,7 @@
 			<div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
 				<div class="row column">
 					<br>
-					<img class="thumbnail" src="http://placehold.it/550x550">
+					<img class="thumbnail" src="">
 					<h5>YAMAGUCHI Takashi</h5>
 					<p>自己紹介文</p>
 				</div>
@@ -36,7 +36,7 @@
 
 				<div class="row small-up-2 medium-up-3 large-up-4">
 					<div class="column">
-						<img class="thumbnail" src="http://placehold.it/550x550">
+						<img class="thumbnail" src="">
 						<h5>My Site</h5>
 					</div>
 
