--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>YAMAGUCHI Takashi</title>
-		<link rel="stylesheet" href="https://takashiyamaguchi.github.io/css/app.css">
+		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body>
 		
