ボタン追加

--- a/button/index.html
+++ b/button/index.html
@@ -5,22 +5,39 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>sandbox | takashi YAMAGUCHI</title>
-		<link rel="stylesheet" href="css/app.css">
+		<link rel="stylesheet" href="../css/app.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	</head>
 	<body>
 		<div class="row">
 			<header class="large-12 columns">
-				<h1>sandbox</h1>
-				<h2 class="headerLead subheader">takashi YAMAGUCHI</h2>
+				<h1>ボタン</h1>
+				<h2 class="headerLead subheader">Button</h2>
 			</header>
 		</div>
 		<div class="row">
-			<section class="large-12 columns">
-				<a href="button/index.html" class="leftUnderline topCategory">ボタン</a><br />
-				<a href="menu/index.html" class="leftUnderline topCategory">メニュー</a><br />
-				<a href="anchor/index.html" class="leftUnderline topCategory">テキストリンク</a>
-			</section>
+			
+			<article class="large-3 columns">
+				<h3 class="article__hd">.flatBase</h3>
+				<a href="#" class="flatBase">ボタン</a>
+			</article>
+			
+			<article class="large-3 columns">
+				<h3 class="article__hd">.flatShadow</h3>
+				<a href="#" class="flatShadow">ボタン</a>
+			</article>
+
+			<article class="large-3 columns">
+				<h3 class="article__hd">.gradient</h3>
+				<a href="#" class="gradient">ボタン</a>
+			</article>
+
+			<article class="large-3 columns end">
+				<h3 class="article__hd">.kirari</h3>
+				<div class="kirariWrap">
+					<a href="#" class="kirari">ボタン</a>
+				</div>
+			</article>
 		</div>
 
 		<script src="bower_components/jquery/dist/jquery.js"></script>
