--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 	<body>
 		<div class="row">
 			<header class="large-12 columns">
-				<h1>sandbox</h1>
-				<h2 class="headerLead subheader">takashi YAMAGUCHI</h2>
+				<div class="row" data-equalizer>
+					<div class="columns large-3" data-equalizer-watch>
+						<h1>sandbox</h1>
+						<h2 class="headerLead subheader">takashi YAMAGUCHI</h2>
+					</div>
+					<div class="columns large-9" data-equalizer-watch>
+						<div class="profImg"></div>
+					</div>
+				</div>
 			</header>
 		</div>
 		<div class="row">
