フルスクリーンメニュー追加

--- a/menu/index.html
+++ b/menu/index.html
@@ -27,32 +27,34 @@
 					<li><a href="#">menu5</a></li>
 				</ul>
 			</article>
-
+		
+			<p>バーガーメニュー</p>
+			
 			<article class="large-12 columns">
-				<h3 class="article__hd">.border-bottom</h3>
-				<div class="cl-effect-21-wrap red">
-					<ul class="cl-effect-21">
-						<li><a href="#">menu1</a></li>
-						<li><a href="#">menu2</a></li>
-						<li><a href="#">menu3</a></li>
-						<li><a href="#">menu4</a></li>
-						<li><a href="#">menu5</a></li>
-					</ul>
+				<h3 class="article__hd">.door-menu</h3>
+				<button id="trigger-overlay" type="button">Open Overlay</button>
+				<div class="overlay overlay-door">
+					<!-- <a href="" title=""></a> -->
+					<button type="button" class="overlay-close">close</button>
+					<nav>
+						<ul>
+							<li><a href="#">ログイン・お客様登録</a></li>
+							<li><a href="#">イラスト依頼のお問い合わせ</a></li>
+							<li><a href="#">展示会情報</a></li>
+							<li><a href="#">イラスト検索</a></li>
+							<li><a href="#">ブログ</a></li>
+							<li>
+								<ul>
+									<li><a href="#"></a></li>
+									<li><a href="#"></a></li>
+									<li><a href="#"></a></li>
+								</ul>
+							</li>
+						</ul>
+					</nav>
 				</div>
 			</article>
 
-			<article class="large-12 columns">
-				<h3 class="article__hd">.border-bottom</h3>
-				<ul class="border-bottom">
-					<li><a href="#">menu1</a></li>
-					<li><a href="#">menu2</a></li>
-					<li><a href="#">menu3</a></li>
-					<li><a href="#">menu4</a></li>
-					<li><a href="#">menu5</a></li>
-				</ul>
-			</article>
-		
-		<div class="test"></div>
 		
 		</div>
 
@@ -62,5 +64,9 @@
 		<script src="../bower_components/what-input/what-input.js"></script>
 		<script src="../bower_components/foundation-sites/dist/foundation.js"></script>
 		<script src="../js/app.js"></script>
+
+		<!-- .door-menu -->
+		<script src="../js/classie.js"></script>
+		<script src="../js/demo1.js"></script>
 	</body>
 </html>
