--- a/menu/index.html
+++ b/menu/index.html
@@ -7,6 +7,9 @@
 		<title>sandbox | takashi YAMAGUCHI</title>
 		<link rel="stylesheet" href="../css/app.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+		<!-- .door-menu -->
+		<script src="../js/modernizr.custom.js"></script>
 	</head>
 	<body>
 		<div class="row">
@@ -32,10 +35,10 @@
 			
 			<article class="large-12 columns">
 				<h3 class="article__hd">.door-menu</h3>
-				<button id="trigger-overlay" type="button">Open Overlay</button>
+				<button id="trigger-overlay" type="button" class="button">MENU</button>
 				<div class="overlay overlay-door">
 					<!-- <a href="" title=""></a> -->
-					<button type="button" class="overlay-close">close</button>
+					<button type="button" class="overlay-close" class="button">close</button>
 					<nav>
 						<ul>
 							<li><a href="#">ログイン・お客様登録</a></li>
@@ -53,9 +56,7 @@
 						</ul>
 					</nav>
 				</div>
-			</article>
-
-		
+			</article>		
 		</div>
 
 
