--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<header class="large-12 columns">
 				<div class="row" data-equalizer>
 					<div class="columns large-3" data-equalizer-watch>
-						<h1>sandbox</h1>
+						<h1 class="headerLogo">sandbox</h1>
 						<h2 class="headerLead subheader">takashi YAMAGUCHI</h2>
 					</div>
 					<div class="columns large-9" data-equalizer-watch>
@@ -26,7 +26,8 @@
 			<section class="large-12 columns">
 				<a href="button/index.html" class="leftUnderline topCategory">ボタン</a><br />
 				<a href="menu/index.html" class="leftUnderline topCategory">メニュー</a><br />
-				<a href="anchor/index.html" class="leftUnderline topCategory">テキストリンク</a>
+				<a href="anchor/index.html" class="leftUnderline topCategory">テキストリンク</a><br />
+				<a href="popup/index.html" class="leftUnderline topCategory">ポップアップ</a>
 			</section>
 		</div>
 
