--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
 		</div>
 		<div class="row">
 			<section class="large-12 columns">
-				<a href="button/index.html" class="leftUnderline topCategory">ボタン</a><br />
-				<a href="menu/index.html" class="leftUnderline topCategory">メニュー</a><br />
-				<a href="anchor/index.html" class="leftUnderline topCategory">テキストリンク</a><br />
-				<a href="popup/index.html" class="leftUnderline topCategory">ポップアップ</a>
+				<a href="button/" class="leftUnderline topCategory">ボタン</a><br />
+				<a href="menu/" class="leftUnderline topCategory">メニュー</a><br />
+				<a href="anchor/" class="leftUnderline topCategory">テキストリンク</a><br />
+				<a href="popup/" class="leftUnderline topCategory">ポップアップ</a><br />
+				<a href="gradient/" class="leftUnderline topCategory">グラデーション</a><br />
+				<a href="landing/" class="leftUnderline topCategory">ランディング</a><br />
+				<a href="animation/" class="leftUnderline topCategory">アニメーション</a><br />
 			</section>
 		</div>
 
