--- a/popup/index.html
+++ b/popup/index.html
@@ -12,7 +12,7 @@
 		<div class="row">
 			<header class="large-12 columns">
 				<h1>ポップアップ</h1>
-				<h2 class="headerLead subheader">popup</h2>
+				<h2 class="headerLead subheader">Popup</h2>
 			</header>
 		</div>
 		<div class="row">
@@ -26,86 +26,20 @@
 				<h3 class="article__hd"></h3>
 				<a href="#" class="button" id="regist02">ログイン/お客様登録</a>
 			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist03">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist04">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist05">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
-			<article class="large-12 columns">
-				<h3 class="article__hd"></h3>
-				<a href="#" class="button" id="regist">ログイン/お客様登録</a>
-			</article>
+		</div>
+
+		<div class="row">
+<div class="reveal" id="exampleModal1" data-reveal>
+<h1>Awesome. I Have It.</h1>
+<p class="lead">Your couch. It is mine.</p>
+<p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+<button class="close-button" data-close aria-label="Close modal" type="button">
+<span aria-hidden="true">&times;</span>
+</button>
+</div>
+
+<p><a data-open="exampleModal1">Click me for a modal</a></p>
+
 		</div>
 
 
@@ -116,7 +50,5 @@
 		<script src="../js/app.js"></script>
 		<!-- balloon.js -->
 		<script src="../js/jquery.balloon.js" type="text/javascript"></script>
-
-
 	</body>
 </html>
