--- a/landing/index.html
+++ b/landing/index.html
@@ -19,7 +19,31 @@
 			<!-- </header>
 		</div> -->
 
-		<div class="container" id="glovalContainer"></div>
+		<div class="container red" id="glovalContainer">
+			<header class="row">
+				<h1 class="small-for-centered">Works</h1>
+			</header>
+			<section class="row collapse maincontent">
+				<div class="columns large-3" id="bgGrid">
+					<div class="works__wrap red" id="worksContent" style="background-image:url('../img/prf.png');">
+					</div>
+					<!-- <img src="//placehold.it/320x340" alt="">
+					<img src="//placehold.it/320x340" alt="">
+					<img src="//placehold.it/320x340" alt="">
+					<img src="//placehold.it/320x340" alt="">
+					<img src="//placehold.it/320x340" alt=""> -->
+				</div>
+				<!-- <div class="columns large-3" id="bgGrid">
+					<img src="//placehold.it/320x340" alt="">
+				</div>
+				<div class="columns large-3" id="bgGrid">
+					<img src="//placehold.it/320x340" alt="">
+				</div>
+				<div class="columns large-3" id="bgGrid">
+					<img src="//placehold.it/320x340" alt="">
+				</div> -->
+			</section>
+		</div>
 		
 
 
