名前が出るところまで

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<a href="gradient/" class="leftUnderline topCategory">グラデーション</a><br />
 				<a href="landing/" class="leftUnderline topCategory">ランディング</a><br />
 				<a href="animation/" class="leftUnderline topCategory">アニメーション</a><br />
+				<a href="article/" class="leftUnderline topCategory">リスト</a><br />
 			</section>
 		</div>
 
