--- a/landing/index.html
+++ b/landing/index.html
@@ -6,55 +6,64 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>sandbox | takashi YAMAGUCHI</title>
 		<link rel="stylesheet" href="../css/app.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
-		<!-- .door-menu -->
-		<script src="../js/modernizr.custom.js"></script>
 	</head>
 	<body>
-		<!-- <div class="row">
-			<header class="large-12 columns"> -->
-				<!-- <h1>ランディング</h1>
-				<h2 class="headerLead subheader">landing</h2> -->
-			<!-- </header>
-		</div> -->
-
-		<div class="container red" id="glovalContainer">
-			<header class="row">
-				<h1 class="small-for-centered">Works</h1>
-			</header>
-			<section class="row collapse maincontent">
-				<div class="columns large-3" id="bgGrid">
-					<div class="works__wrap red" id="worksContent" style="background-image:url('../img/prf.png');">
-					</div>
-					<!-- <img src="//placehold.it/320x340" alt="">
-					<img src="//placehold.it/320x340" alt="">
-					<img src="//placehold.it/320x340" alt="">
-					<img src="//placehold.it/320x340" alt="">
-					<img src="//placehold.it/320x340" alt=""> -->
+		<a href="#" title="" class="testes">test<span class="test">●</span></a>
+		<div class="globalWrapper-landing container" id="glovalContainerLanding">
+			<header class="landingHeader row">
+				<h1 class="title">Illustrator</h1>
+				<p class="lead">コヨミイイラストマッチングサービスに<br />ご協力いただいているイラストレーターの皆さま</p>
+			</header><!-- /header -->
+			<div class="authorWrapper row small-up-4">
+				<div class="author column one" id="authorPiece">
+					<a href="#" class="author__inner red">
+						<img src="../img/white.gif" data-original="../img/thumb-01.png" class="lazy">
+						<p class="author__text">仮に名前を入れるならここに入れる</p>
+					</a>
 				</div>
-				<!-- <div class="columns large-3" id="bgGrid">
-					<img src="//placehold.it/320x340" alt="">
+				<div class="author column two">
+					<img src="../img/white.gif" data-original="../img/thumb-02.png" class="lazy">
 				</div>
-				<div class="columns large-3" id="bgGrid">
-					<img src="//placehold.it/320x340" alt="">
+				<div class="author column three">
+					<img src="../img/white.gif" data-original="../img/thumb-03.png" class="lazy">
 				</div>
-				<div class="columns large-3" id="bgGrid">
-					<img src="//placehold.it/320x340" alt="">
+				<div class="author column four">
+					<img src="../img/white.gif" data-original="../img/thumb-04.png" class="lazy">
+				</div>
+				<!-- <div class="author column one">
+					<img src="../img/white.gif" data-original="../img/thumb-05.png" class="lazy">
+				</div>
+				<div class="author column two">
+					<img src="../img/white.gif" data-original="../img/thumb-01.png" class="lazy">
+				</div>
+				<div class="author column three">
+					<img src="../img/white.gif" data-original="../img/thumb-02.png" class="lazy">
+				</div>
+				<div class="author column four">
+					<img src="../img/white.gif" data-original="../img/thumb-03.png" class="lazy">
+				</div>
+				<div class="author column one">
+					<img src="../img/white.gif" data-original="../img/thumb-04.png" class="lazy">
+				</div>
+				<div class="author column two">
+					<img src="../img/white.gif" data-original="../img/thumb-05.png" class="lazy">
+				</div>
+				<div class="author column three">
+					<img src="../img/white.gif" data-original="../img/thumb-01.png" class="lazy">
+				</div>
+				<div class="author column four">
+					<img src="../img/white.gif" data-original="../img/thumb-02.png" class="lazy">
 				</div> -->
-			</section>
+			</div> <!-- end .authorWrapper -->
 		</div>
 		
-
-
-
 		<script src="../bower_components/jquery/dist/jquery.js"></script>
 		<script src="../bower_components/what-input/what-input.js"></script>
 		<script src="../bower_components/foundation-sites/dist/foundation.js"></script>
-		<script src="../js/app.js"></script>
 
-		<!-- .door-menu -->
-		<script src="../js/classie.js"></script>
-		<script src="../js/demo1.js"></script>
+		<!-- jQuery.lazyload 画像を遅らせて読み込むプラグイン -->
+		<script src="../js/lazyload/jquery.lazyload.js"></script>
+
+		<script src="../js/landing.js"></script>
 	</body>
 </html>
